# stdcsv

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  compile_commands.json  configure  configure.ac  in.csv
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
include/: csv.h  csvrw.h  util.h
lib/: Makefile.am  Makefile.in  charnode.c  csv.c  csverror.c  csverror.h  csvsignal.c  csvsignal.h  field.c  internal.h  misc.c  misc.h  reader.c  safegetline.c  safegetline.h  util.c  writer.c
lib/docs/: Makefile.am  Makefile.in
lib/include/: csv.h  csverror.h  safegetline.h  util.h
lib/util/: Makefile.am  Makefile.in  stringy.c  stringy.h  util.h
src/: Makefile.am  Makefile.in  csvfield.c  csvreader.c  csvwriter.c  main  main.c  stdcsv.c  util.c
src/csv/: csvreader.c  csvwriter.c  field.c  reader.c  writer.c
tests/: Makefile.am  Makefile.in  check_libcsv.c  check_mmap  check_mmap.c  check_parse  check_parse.c  check_read  check_read.c  check_sgetline  check_sgetline.c  test1.txt  test_cr.txt  test_crlf.txt  test_lf.txt
