TESTS = check_libcsv
check_PROGRAMS = check_libcsv
check_libcsv_SOURCES = check_libcsv.c $(top_builddir)/lib/include/util.h $(top_builddir)/lib/include/safegetline.h $(top_builddir)/lib/include/csv.h
check_libcsv_CFLAGS = $(CHECK_CFLAGS)
check_libcsv_LDADD = $(top_builddir)/lib/libcsv.la $(CHECK_LIBS)

